fixed photo overflowing

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,9 +1,16 @@
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+}
 .about__profilePicture {
   margin-top: 10px;
   border-radius: 100%;
   border: solid 3px #5e81ac;
+  height: auto;
+  width: 100%;
   max-width: 400px;
-  width: auto;
 }
 
 .about > p {
